--- a/yes_style.css
+++ b/yes_style.css
@@ -4,7 +4,9 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f9e3e3;
+    background-image: url('img/fondo.jpg'); /* Cambia esta ruta por la de tu imagen */
+    background-size: cover; /* Hace que la imagen cubra todo el fondo */
+    background-position: center; /* Centra la imagen */
     font-family: 'Arial', sans-serif;
 }
 
