--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,19 @@ h1 {
 .no-button:hover {
   background-color: #d32f2f;
 }
+
+.explanation {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #e0e0e0; /* Fondo gris claro para el recuadro */
+  border: 2px solid #000; /* Borde negro */
+  border-radius: 8px; /* Bordes redondeados */
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.explanation p {
+  margin: 0;
+  font-weight: bold;
+  color: #333;
+}
